samples/_failures_safe/1761256185_575713_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1e8d0ba.c: In function ‘main’:
./samples/SAFE/__tmp_f1e8d0ba.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
